--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,6 @@
 
     <name>Shared Library</name>
     <description>Jenkins Shared library example with object and unit tests.</description>
-    
-    <properties>
-        <!-- Sonar & Jenkins related properties  -->
-    </properties>
-
-
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -34,7 +28,7 @@
 
     <build>
         <sourceDirectory>src</sourceDirectory>
-        <testSourceDiement>
+        <testSourceDirectory>tests</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jacoco</groupId>
